--- a/src/assets/styles/_resets.scss
+++ b/src/assets/styles/_resets.scss
@@ -34,7 +34,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  color: rgb(2, 58, 21);
+  color: #181818;
 
   @media screen and (max-width: 576px){
     font-size: .875rem;
